# zeus

./: .gitignore  README.md  coverage.sh  package-lock.json  package.json  rom.zeus  webpack.config.dev.js
.github/workflows/: zeus-core.yml
app/: App.js  colors.scss  index.js  styles.scss
app/components/BottomSevenSegment/: index.js  styles.scss
app/components/Button/: index.js  styles.scss
app/components/ConsoleDecoration/: index.js  styles.scss
app/components/ConsoleLogo/: index.js  styles.scss
app/components/Dpad/: index.js  styles.scss
app/components/Menu/: index.js  styles.scss
app/components/MenuItem/: index.js  styles.scss
app/components/Pixel/: index.js  styles.scss
app/components/Screen/: index.js  styles.scss
app/components/ScreenDecoration/: index.js  styles.scss
app/components/SevenSegment/: index.js  styles.scss
app/components/Title/: index.js  styles.scss
native/: Cargo.toml
native/src/: lib.rs  zeus.rs
native/src/core/: Cargo.toml  arithm.rs  cpu.rs  memory.rs  mod.rs  rom.rs  screen.rs  seven_segment.rs  zeus.rs
native/src/core/src/: arithm.rs  seven_segment.rs
native/src/zeus_core/: Cargo.toml
native/src/zeus_core/src/: cpu.rs  lib.rs  memory.rs
native/src/zeus_core/tests/: arithm_tests.rs  cpu_tests.rs  memory_tests.rs  sanity_test.rs
native/tests/: arithm_tests.rs
resources/html/: index.html
roms/: drawing.zeus  intro.zeus  sevenSegment.zeus
server/: index.js  webpack.config.js
