[package]
name = "zeus"
version = "0.1.0"
authors = ["nukeop <nukeop@gumblert.tech>"]
license = "AGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "zeus"
crate-type = ["rlib", "dylib"]

[build-dependencies]
neon-build = "0.3"

[dependencies]
zeus_core = { path = "./src/zeus_core" }
neon = "0.3"
lazy_static = "1.1.0"